--- a/Bayesian Inference/Exercicio_3.Rmd
+++ b/Bayesian Inference/Exercicio_3.Rmd
@@ -5,7 +5,7 @@ output:
     latex_engine: xelatex
 ---
 
-#### Nome: Juan Lucas Montanaro, nºUSP: 11912787
+#### Nome: Juan Lucas Montanaro
 
 ## Exercício Distribuição de Poisson - Resposta
 
